[package]
name = "mew"
version = "0.0.2"
authors = ["Emily <mew@emily.moe>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "a next‐generation build system (vapourware)"
homepage = "https://mew.build/"
repository = "https://github.com/mew-build/mew"
# TODO: crates.io can’t render AsciiDoc;
# should probably either have a separate plain text readme file,
# or a build step that automatically converts to Markdown
# before publication.
readme = "README.adoc"
include = ["src/**/*", "Cargo.toml", "/*.adoc"]
# don’t pollute keywords with a basically‐empty package
#keywords = ["cli", "build", "language"]
#categories = [
#    "caching",
#    "command-line-utilities",
#    "development-tools",
#    "development-tools::build-utils",
#]

[workspace]
members = []

[dependencies]
